--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fal-ai/client": "^1.9.3",
+    "@huggingface/inference": "^4.13.12",
     "@imgly/background-removal": "^1.7.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "replicate": "^1.4.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
